client tool optimize